Adding 🦠 to the nav bar

--- a/covid19-india-testing/index.html
+++ b/covid19-india-testing/index.html
@@ -17,7 +17,7 @@
 <body style="background-color: black; color: azure; font-family: Verdana, Geneva, Tahoma, sans-serif;">
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">COVID19 Testing in India</a>
+        <a class="navbar-brand" href="#"><big>🦠</big> COVID19 Testing in India</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
