--- a/covid19-india-testing/index.html
+++ b/covid19-india-testing/index.html
@@ -78,7 +78,7 @@
 
               I am collecting the state-wise test positivity rate data from the <a target="_blank" href="https://api.covid19india.org">COVID19India's Data API</a>. <br><br>
 
-              Note: These are still early days for this dashboard, and I will be updating the metrics I present, on top of test positivity rates, and the questions I seek to answer about India's approach to testing for COVID19. Constructive feedback, and suggestions are welcome. - Vijay, May 26, 2020.<br><br>
+              Note: These are still early days for this dashboard, and I will be updating the metrics I present, on top of test positivity rates, and seek to answer other questions about India's approach to testing for COVID19. Constructive feedback, and suggestions are welcome. - Vijay, May 26, 2020.<br><br>
           </div>
           
         </div>
