--- a/covid19-india-testing/index.html
+++ b/covid19-india-testing/index.html
@@ -97,7 +97,7 @@
         <div class="row">
             <div class="col-sm-5">
                 
-                <table class="table text-light table-borderless table-sm table-hover table-dark">
+                <table class="table text-light table-borderless table-sm table-hover table-dark" style="overflow-y:auto; height:100px;">
                     <thead class="thead-dark">
                         <tr>
                             <th scope="col" style="text-align: left;">State</th>
@@ -109,7 +109,11 @@
                     <tbody id="statesrows"></tbody>
                 </table>
             </div>
-            <div class="col-sm-7" id="map"></div>
+            <div class="col-sm-7" >
+              <div id="timelines"></div>
+              <br/>
+              <div id="map"></div>
+            </div>
         </div>
         
     </div>
