covid19: tabular trend curves

--- a/covid19-india-testing/index.html
+++ b/covid19-india-testing/index.html
@@ -90,12 +90,12 @@
 
               I am collecting the state-wise test positivity rate data from the <a target="_blank" href="https://api.covid19india.org">COVID19India's Data API</a>. <br><br>
 
-              Note: These are still early days for this dashboard, and I will be updating the metrics I present, on top of test positivity rates, and seek to answer other questions about India's approach to testing for COVID19. Constructive feedback, and suggestions are welcome. - Vijay, May 26, 2020.<br><br>
+              Note: These are still early days for this dashboard, and I will be updating the metrics I present, on top of test positivity rates, and seek to answer other questions about India's approach to testing for COVID19. Constructive feedback, and suggestions are welcome. <br/> - Vijay, May 26, 2020.<br><br>
           </div>
           
         </div>
         <div class="row">
-            <div class="col-sm-5">
+            <div class="col-sm-6">
                 
                 <table class="table text-light table-borderless table-sm table-hover table-dark" style="overflow-y:auto; height:100px;">
                     <thead class="thead-dark">
@@ -103,13 +103,14 @@
                             <th scope="col" style="text-align: left;">State</th>
                             <th scope="col" style="text-align: left;">Test Positivity</th>
                             <th scope="col" style="text-align: left;">Last Updated</th>
+                            <th scope="col" style="text-align: left;">Trend</th>
                             <!-- <th scope="col">Source</th> -->
                         </tr>
                     </thead>
                     <tbody id="statesrows"></tbody>
                 </table>
             </div>
-            <div class="col-sm-7" >
+            <div class="col-sm-6" >
               <div id="timelines"></div>
               <br/>
               <div id="map"></div>
