--- a/covid19-india-testing/index.html
+++ b/covid19-india-testing/index.html
@@ -97,7 +97,7 @@
         <div class="row">
             <div class="col-sm-6">
                 
-                <table class="table text-light table-borderless table-sm table-hover table-dark" style="overflow-y:auto; height:100px;">
+                <table class="table text-light table-borderless table-sm table-hover table-dark bg-transparent" style="overflow-y:auto; height:100px;">
                     <thead class="thead-dark">
                         <tr>
                             <th scope="col" style="text-align: left;">State</th>
