--- a/covid19-india-testing/index.html
+++ b/covid19-india-testing/index.html
@@ -29,7 +29,7 @@
   
     return t;
   }(document, "script", "twitter-wjs"));
-  go("about");
+  // go("about");
   </script>
   <title>COVID19 Testing in India</title>
 
@@ -114,6 +114,12 @@
                             <th scope="col" style="text-align: left;">Last Updated</th>
                             <th scope="col" style="text-align: left;">Trend</th>
                             <!-- <th scope="col">Source</th> -->
+                        </tr>
+                        <tr>
+                          <th style="background-color: black; text-align: left; font-weight: medium;">India</th>
+                          <th style="background-color: black; text-align: left; font-weight: medium;" id="ind-tpr"></th>
+                          <th style="background-color: black; text-align: left; font-weight: normal;" id="ind-updatedon"></th>
+                          <th style="background-color: black; text-align: left;" id="ind-trend"></th>
                         </tr>
                     </thead>
                     <tbody id="statesrows"></tbody>
