covid19: data update, label updates, bringing back gray trends

--- a/covid19-india-testing/index.html
+++ b/covid19-india-testing/index.html
@@ -107,12 +107,19 @@
             <div class="col-sm-6">
                 
                 <table class="table text-light table-borderless table-sm table-hover table-dark bg-transparent" style="overflow-y:auto; height:100px;">
+                    <colgroup>
+                      <col span="1" >
+                      <col span="1" >
+                      <col span="1" >
+                      <col span="1" style="width: 10%;">
+                  </colgroup>
+
                     <thead class="thead-dark">
                         <tr>
-                            <th scope="col" style="text-align: left;">Region</th>
-                            <th scope="col" style="text-align: left;">Test Positivity</th>
-                            <th scope="col" style="text-align: left;">Last Updated</th>
-                            <th scope="col" style="text-align: left;">Trend</th>
+                            <th scope="col" style="text-align: left; font-size: small;">Region</th>
+                            <th scope="col" style="text-align: left; font-size: small;">Test Positivity</th>
+                            <th scope="col" style="text-align: left; font-size: small;">Updated on</th>
+                            <th scope="col" style="text-align: left; font-size: small;">Trend</th>
                             <!-- <th scope="col">Source</th> -->
                         </tr>
                         <tr>
