--- a/covid19-india-testing/index.html
+++ b/covid19-india-testing/index.html
@@ -44,6 +44,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.16.0/d3.min.js"></script>
   <script src="https://unpkg.com/topojson@3"></script>
+  <script src="https://unpkg.com/textures@1.2.0/dist/textures.js"></script>
 </head>
 
 <body style="background-color: black; color: azure; font-family: Verdana, Geneva, Tahoma, sans-serif;">
