covid19: recent positivity rate sources

--- a/covid19-india-testing/index.html
+++ b/covid19-india-testing/index.html
@@ -124,7 +124,7 @@
                             <!-- <th scope="col">Source</th> -->
                         </tr>
                         <tr>
-                          <th style="background-color: black; text-align: left; font-weight: medium;">India</th>
+                          <th style="background-color: black; text-align: left; font-weight: medium;" id="india">India</th>
                           <th style="background-color: black; text-align: left; font-weight: medium;" id="ind-tpr"></th>
                           <th style="background-color: black; text-align: left; font-weight: normal;" id="ind-updatedon"></th>
                           <th style="background-color: black; text-align: left;" id="ind-trend"></th>
