covid19: data update, curated set of tweets describing the data

--- a/covid19-india-testing/index.html
+++ b/covid19-india-testing/index.html
@@ -58,7 +58,8 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active"><a class="nav-link" href="#writeup">Summary</a></li>
-            <li class="nav-item active"><a class="nav-link" href="#aboutthisdashboard">About this dashboard</a></li>
+            <li class="nav-item active"><a class="nav-link" href="#notes">Notes</a></li>
+            <li class="nav-item active"><a class="nav-link" href="#aboutthisdashboard">About</a></li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Broader News Reporting
@@ -151,7 +152,38 @@
             </div>
         </div>
         <div class="row">
-          <div class="col-sm-12">
+          <div class="col-sm-6">
+            <hr style="border: 0.5px solid dimgray;"/>
+            <h3 id="notes">Pandemic Notes</h3>
+
+            <h5>June 7</h5>
+
+            <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr"><a href="https://twitter.com/hashtag/COVID19?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19</a> Test Positivity Rate for <a href="https://twitter.com/hashtag/TamilNadu?src=hash&amp;ref_src=twsrc%5Etfw">#TamilNadu</a> crosses the national average on June 7. Is the infection spreading faster? Or is the testing effort waning? Or Both?<br><br>... <a href="https://twitter.com/hashtag/covid19testing?src=hash&amp;ref_src=twsrc%5Etfw">#covid19testing</a> <a href="https://twitter.com/hashtag/COVID19India?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19India</a> <a href="https://twitter.com/hashtag/covid19indiatesting?src=hash&amp;ref_src=twsrc%5Etfw">#covid19indiatesting</a> more here: <a href="https://t.co/qEnJBlFo84">https://t.co/qEnJBlFo84</a> <a href="https://t.co/iLzkIIF3BY">pic.twitter.com/iLzkIIF3BY</a></p>&mdash; Vijay Krishna Palepu (@vkrishnapalepu) <a href="https://twitter.com/vkrishnapalepu/status/1269837627613560832?ref_src=twsrc%5Etfw">June 8, 2020</a></blockquote>
+
+            <h5>June 4</h5>
+
+            <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">UPDATE: Delhi’s test positivity rate is at 10.27% as of Jun 3rd. This is a upward swing of more than 1.5%pts (⬆️from 8.71%) since May 29. 📈 at this rate, as the national capital <a href="https://twitter.com/hashtag/Delhi?src=hash&amp;ref_src=twsrc%5Etfw">#Delhi</a> is set up to become a <a href="https://twitter.com/hashtag/COVID19India?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19India</a> super spreader. <a href="https://t.co/qEnJBlFo84">https://t.co/qEnJBlFo84</a>. <a href="https://twitter.com/hashtag/TestDelhi?src=hash&amp;ref_src=twsrc%5Etfw">#TestDelhi</a> <a href="https://t.co/h1P1ZFrxPi">pic.twitter.com/h1P1ZFrxPi</a></p>&mdash; Vijay Krishna Palepu (@vkrishnapalepu) <a href="https://twitter.com/vkrishnapalepu/status/1268465485848301568?ref_src=twsrc%5Etfw">June 4, 2020</a></blockquote>
+
+            <h5>June 3</h5>
+
+            <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">Given its position as the national capital <a href="https://twitter.com/hashtag/Delhi?src=hash&amp;ref_src=twsrc%5Etfw">#Delhi</a>’s rise in test positivity suggests a shortfall in testing — and with the <a href="https://twitter.com/hashtag/covid19?src=hash&amp;ref_src=twsrc%5Etfw">#covid19</a> lockdown in <a href="https://twitter.com/hashtag/India?src=hash&amp;ref_src=twsrc%5Etfw">#India</a> coming to an end, an inadequate testing strategy might make <a href="https://twitter.com/hashtag/Delhi?src=hash&amp;ref_src=twsrc%5Etfw">#Delhi</a> a super spreader of sorts. <a href="https://twitter.com/hashtag/COVID19India?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19India</a> <a href="https://twitter.com/hashtag/CovidTesting?src=hash&amp;ref_src=twsrc%5Etfw">#CovidTesting</a></p>&mdash; Vijay Krishna Palepu (@vkrishnapalepu) <a href="https://twitter.com/vkrishnapalepu/status/1268262803065892864?ref_src=twsrc%5Etfw">June 3, 2020</a></blockquote>
+            
+            <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">The <a href="https://twitter.com/hashtag/COVID19?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19</a> Test Positivity Rate for <a href="https://twitter.com/hashtag/Maharashtra?src=hash&amp;ref_src=twsrc%5Etfw">#Maharashtra</a> is on a dramatic rise 📈 14.5% of all who are tested in the state are showing up as positive for COVID19. It was sitting 13.7% five days ago. <a href="https://t.co/qEnJBlFo84">https://t.co/qEnJBlFo84</a> <a href="https://t.co/k7v6xs5iBB">pic.twitter.com/k7v6xs5iBB</a></p>&mdash; Vijay Krishna Palepu (@vkrishnapalepu) <a href="https://twitter.com/vkrishnapalepu/status/1268260040026107905?ref_src=twsrc%5Etfw">June 3, 2020</a></blockquote>
+
+
+            <h5>June 2</h5>
+
+            <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr"><a href="https://twitter.com/hashtag/Maharashtra?src=hash&amp;ref_src=twsrc%5Etfw">#Maharashtra</a> is leading the pack with 13.7%. And it is on the rise. Higher Test Positivity rates suggest a reactive testing strategy where testing is likely prioritized for folks who are suspected to be ill. The state will likely need a broader <a href="https://twitter.com/hashtag/covid19?src=hash&amp;ref_src=twsrc%5Etfw">#covid19</a> testing approach. <a href="https://t.co/KhejzuFwhV">pic.twitter.com/KhejzuFwhV</a></p>&mdash; Vijay Krishna Palepu (@vkrishnapalepu) <a href="https://twitter.com/vkrishnapalepu/status/1267742730563629056?ref_src=twsrc%5Etfw">June 2, 2020</a></blockquote>
+
+            <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr"><a href="https://twitter.com/hashtag/Delhi?src=hash&amp;ref_src=twsrc%5Etfw">#Delhi</a> and <a href="https://twitter.com/hashtag/Gujarat?src=hash&amp;ref_src=twsrc%5Etfw">#Gujarat</a> are tracking at 8.71% and 7.91% resp. These <a href="https://twitter.com/hashtag/covid19?src=hash&amp;ref_src=twsrc%5Etfw">#covid19</a> Test Positivity numbers are both on the higher side and growing. <a href="https://t.co/sCaVTEUMR6">pic.twitter.com/sCaVTEUMR6</a></p>&mdash; Vijay Krishna Palepu (@vkrishnapalepu) <a href="https://twitter.com/vkrishnapalepu/status/1267742735575834626?ref_src=twsrc%5Etfw">June 2, 2020</a></blockquote>
+
+            <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr"><a href="https://twitter.com/hashtag/Bihar?src=hash&amp;ref_src=twsrc%5Etfw">#Bihar</a> is yet another state that has shown a steady growth in <a href="https://twitter.com/hashtag/covid19?src=hash&amp;ref_src=twsrc%5Etfw">#covid19</a> Test Positivity rates. Although below 5%, this steady rise is worth keeping an eye on. <a href="https://t.co/xnb0X6qqF2">pic.twitter.com/xnb0X6qqF2</a></p>&mdash; Vijay Krishna Palepu (@vkrishnapalepu) <a href="https://twitter.com/vkrishnapalepu/status/1267742741519192065?ref_src=twsrc%5Etfw">June 2, 2020</a></blockquote>
+
+            <blockquote class="twitter-tweet" data-conversation="none" data-theme="dark"><p lang="en" dir="ltr">Test positivity rates in <a href="https://twitter.com/hashtag/TamilNadu?src=hash&amp;ref_src=twsrc%5Etfw">#TamilNadu</a> present an interesting trend. The state shows an early dip in test positivity rate, only to see it grow in more recent days. Again, latest numbers place it at 4.54% — below 5%. But the slow upward trend is concerning. <a href="https://t.co/Vmz3kvLR3x">pic.twitter.com/Vmz3kvLR3x</a></p>&mdash; Vijay Krishna Palepu (@vkrishnapalepu) <a href="https://twitter.com/vkrishnapalepu/status/1267742747231830016?ref_src=twsrc%5Etfw">June 2, 2020</a></blockquote>
+            
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+          </div>
+          <div class="col-sm-6">
             <hr style="border: 0.5px solid dimgray;"/>
             <h3 id="aboutthisdashboard">About this dashboard</h3>
 
