covid19: linking the medium post

--- a/covid19-india-testing/index.html
+++ b/covid19-india-testing/index.html
@@ -156,6 +156,9 @@
             <hr style="border: 0.5px solid dimgray;"/>
             <h3 id="notes">Pandemic Notes</h3>
 
+            <h5>June 8</h5>
+            <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">COVID19 Lockdowns protect Medical Infrastructures <a href="https://t.co/v8NHCws9UJ">https://t.co/v8NHCws9UJ</a></p>&mdash; Vijay Krishna Palepu (@vkrishnapalepu) <a href="https://twitter.com/vkrishnapalepu/status/1270136001248194561?ref_src=twsrc%5Etfw">June 8, 2020</a></blockquote>
+
             <h5>June 7</h5>
 
             <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr"><a href="https://twitter.com/hashtag/COVID19?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19</a> Test Positivity Rate for <a href="https://twitter.com/hashtag/TamilNadu?src=hash&amp;ref_src=twsrc%5Etfw">#TamilNadu</a> crosses the national average on June 7. Is the infection spreading faster? Or is the testing effort waning? Or Both?<br><br>... <a href="https://twitter.com/hashtag/covid19testing?src=hash&amp;ref_src=twsrc%5Etfw">#covid19testing</a> <a href="https://twitter.com/hashtag/COVID19India?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19India</a> <a href="https://twitter.com/hashtag/covid19indiatesting?src=hash&amp;ref_src=twsrc%5Etfw">#covid19indiatesting</a> more here: <a href="https://t.co/qEnJBlFo84">https://t.co/qEnJBlFo84</a> <a href="https://t.co/iLzkIIF3BY">pic.twitter.com/iLzkIIF3BY</a></p>&mdash; Vijay Krishna Palepu (@vkrishnapalepu) <a href="https://twitter.com/vkrishnapalepu/status/1269837627613560832?ref_src=twsrc%5Etfw">June 8, 2020</a></blockquote>
