--- a/covid19-india-testing/index.html
+++ b/covid19-india-testing/index.html
@@ -13,6 +13,7 @@
     gtag('config', 'UA-167438965-1');
   </script>
 
+  <!-- Twitter -->
   <script>window.twttr = (function(d, s, id) {
     var js, fjs = d.getElementsByTagName(s)[0],
       t = window.twttr || {};
@@ -33,7 +34,7 @@
   </script>
   <title>COVID19 Testing in India</title>
 
-
+  <!-- Bootstrap -->
   <!-- CSS only -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
@@ -42,6 +43,7 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
+  <!-- D3.js, TopoJS, Textures.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.16.0/d3.min.js"></script>
   <script src="https://unpkg.com/topojson@3"></script>
   <script src="https://unpkg.com/textures@1.2.0/dist/textures.js"></script>
@@ -183,8 +185,6 @@
             <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr"><a href="https://twitter.com/hashtag/Bihar?src=hash&amp;ref_src=twsrc%5Etfw">#Bihar</a> is yet another state that has shown a steady growth in <a href="https://twitter.com/hashtag/covid19?src=hash&amp;ref_src=twsrc%5Etfw">#covid19</a> Test Positivity rates. Although below 5%, this steady rise is worth keeping an eye on. <a href="https://t.co/xnb0X6qqF2">pic.twitter.com/xnb0X6qqF2</a></p>&mdash; Vijay Krishna Palepu (@vkrishnapalepu) <a href="https://twitter.com/vkrishnapalepu/status/1267742741519192065?ref_src=twsrc%5Etfw">June 2, 2020</a></blockquote>
 
             <blockquote class="twitter-tweet" data-conversation="none" data-theme="dark"><p lang="en" dir="ltr">Test positivity rates in <a href="https://twitter.com/hashtag/TamilNadu?src=hash&amp;ref_src=twsrc%5Etfw">#TamilNadu</a> present an interesting trend. The state shows an early dip in test positivity rate, only to see it grow in more recent days. Again, latest numbers place it at 4.54% — below 5%. But the slow upward trend is concerning. <a href="https://t.co/Vmz3kvLR3x">pic.twitter.com/Vmz3kvLR3x</a></p>&mdash; Vijay Krishna Palepu (@vkrishnapalepu) <a href="https://twitter.com/vkrishnapalepu/status/1267742747231830016?ref_src=twsrc%5Etfw">June 2, 2020</a></blockquote>
-            
-            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
           </div>
           <div class="col-sm-6">
             <hr style="border: 0.5px solid dimgray;"/>
