covid19: revealing raw testing numbers

--- a/covid19-india-testing/index.html
+++ b/covid19-india-testing/index.html
@@ -114,6 +114,8 @@
                     <colgroup>
                       <col span="1" >
                       <col span="1" >
+                      <col span="1">
+                      <col span="1">
                       <col span="1" >
                       <col span="1" style="width: 10%;">
                   </colgroup>
@@ -121,15 +123,19 @@
                     <thead class="thead-dark">
                         <tr>
                             <th scope="col" style="text-align: left; font-size: small;">Region</th>
-                            <th scope="col" style="text-align: left; font-size: small;">Test Positivity</th>
-                            <th scope="col" style="text-align: left; font-size: small;">Updated on</th>
+                            <th scope="col" style="text-align: right; font-size: small;">Test Positivity</th>
+                            <th scope="col" style="text-align: right; font-size: small;">Total Tests</th>
+                            <th scope="col" style="text-align: right; font-size: small;">Positive Tests</th>
+                            <th scope="col" style="text-align: right; font-size: small;">Updated on</th>
                             <th scope="col" style="text-align: left; font-size: small;">Trend</th>
                             <!-- <th scope="col">Source</th> -->
                         </tr>
                         <tr>
                           <th style="background-color: black; text-align: left; font-weight: medium;" id="india">India</th>
-                          <th style="background-color: black; text-align: left; font-weight: medium;" id="ind-tpr"></th>
-                          <th style="background-color: black; text-align: left; font-weight: normal;" id="ind-updatedon"></th>
+                          <th style="background-color: black; text-align: right; font-weight: medium;" id="ind-tpr"></th>
+                          <th style="background-color: black; text-align: right; font-weight: medium;" id="ind-tests">n/a</th>
+                          <th style="background-color: black; text-align: right; font-weight: medium;" id="ind-postests">n/a</th>
+                          <th style="background-color: black; text-align: right; font-weight: normal;" id="ind-updatedon"></th>
                           <th style="background-color: black; text-align: left;" id="ind-trend"></th>
                         </tr>
                     </thead>
