--- a/covid19-india-testing/index.html
+++ b/covid19-india-testing/index.html
@@ -1,7 +1,9 @@
 <html>
 
 <head>
+  <title>COVID19 Testing in India</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🦠</text></svg>" />
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-167438965-1"></script>
@@ -32,7 +34,6 @@
   }(document, "script", "twitter-wjs"));
   // go("about");
   </script>
-  <title>COVID19 Testing in India</title>
 
   <!-- Bootstrap -->
   <!-- CSS only -->
