--- a/covid19-india-testing/index.html
+++ b/covid19-india-testing/index.html
@@ -155,6 +155,9 @@
             <hr style="border: 0.5px solid dimgray;"/>
             <h3 id="notes">Pandemic Notes</h3>
 
+            <h5>June 15</h5>
+            <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr"><a href="https://twitter.com/hashtag/Covid19test?src=hash&amp;ref_src=twsrc%5Etfw">#Covid19test</a> Positivity% is spiking in <a href="https://twitter.com/hashtag/Ladakh?src=hash&amp;ref_src=twsrc%5Etfw">#Ladakh</a>, <a href="https://twitter.com/hashtag/India?src=hash&amp;ref_src=twsrc%5Etfw">#India</a> 📈<br>Jun7: it was well below 2%.<br>Today: at 4.93%⬆️ (~5%) =&gt; on avg., nearly 5 out of every 100 people tested for <a href="https://twitter.com/hashtag/COVID19?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19</a> are testing positive for the infection.<br><br>More at: <a href="https://t.co/PaxEbeouup">https://t.co/PaxEbeouup</a> <a href="https://twitter.com/hashtag/covidindiatesting?src=hash&amp;ref_src=twsrc%5Etfw">#covidindiatesting</a> <a href="https://t.co/l8uN3rHnYQ">pic.twitter.com/l8uN3rHnYQ</a></p>&mdash; Vijay Krishna Palepu (@vkrishnapalepu) <a href="https://twitter.com/vkrishnapalepu/status/1272615098436030464?ref_src=twsrc%5Etfw">June 15, 2020</a></blockquote>
+
             <h5>June 8</h5>
             <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">COVID19 Lockdowns protect Medical Infrastructures <a href="https://t.co/v8NHCws9UJ">https://t.co/v8NHCws9UJ</a></p>&mdash; Vijay Krishna Palepu (@vkrishnapalepu) <a href="https://twitter.com/vkrishnapalepu/status/1270136001248194561?ref_src=twsrc%5Etfw">June 8, 2020</a></blockquote>
 
