--- a/covid19-india-testing/index.html
+++ b/covid19-india-testing/index.html
@@ -109,7 +109,7 @@
           
         </div>
         <div class="row">
-            <div class="col-sm-6">
+            <div class="col-sm-6 table-responsive">
                 
                 <table class="table text-light table-borderless table-sm table-hover table-dark bg-transparent" style="overflow-y:auto; height:100px;">
                     <colgroup>
