covid19: minor fixes around responsive tables and divs

--- a/covid19-india-testing/index.html
+++ b/covid19-india-testing/index.html
@@ -109,7 +109,7 @@
           
         </div>
         <div class="row">
-            <div class="col-sm-6 table-responsive">
+            <div class="col-md-6 table-responsive">
                 
                 <table class="table text-light table-borderless table-sm table-hover table-dark bg-transparent" style="overflow-y:auto; height:100px;">
                     <colgroup>
@@ -117,7 +117,6 @@
                       <col span="1" >
                       <col span="1">
                       <col span="1">
-                      <col span="1" >
                       <col span="1" style="width: 10%;">
                   </colgroup>
 
@@ -140,7 +139,7 @@
                     <tbody id="statesrows" style="font-size: small;"></tbody>
                 </table>
             </div>
-            <div class="col-sm-6" >
+            <div class="col-md-6" >
               <div id="total-pos-tests-timelines"></div><br/>
               <div id="total-tests-timelines"></div><br/>
               <div id="timelines"></div><br/>
@@ -148,7 +147,7 @@
             </div>
         </div>
         <div class="row">
-          <div class="col-sm-6">
+          <div class="col-md-6">
             <hr style="border: 0.5px solid dimgray;"/>
             <h3 id="notes">Pandemic Notes</h3>
 
@@ -197,7 +196,7 @@
 
             <blockquote class="twitter-tweet" data-conversation="none" data-theme="dark"><p lang="en" dir="ltr">Test positivity rates in <a href="https://twitter.com/hashtag/TamilNadu?src=hash&amp;ref_src=twsrc%5Etfw">#TamilNadu</a> present an interesting trend. The state shows an early dip in test positivity rate, only to see it grow in more recent days. Again, latest numbers place it at 4.54% — below 5%. But the slow upward trend is concerning. <a href="https://t.co/Vmz3kvLR3x">pic.twitter.com/Vmz3kvLR3x</a></p>&mdash; Vijay Krishna Palepu (@vkrishnapalepu) <a href="https://twitter.com/vkrishnapalepu/status/1267742747231830016?ref_src=twsrc%5Etfw">June 2, 2020</a></blockquote>
           </div>
-          <div class="col-sm-6">
+          <div class="col-md-6">
             <div id="writeup">
               <hr style="border: 0.5px solid dimgray;"/>
               <h3>Summary</h3>
